platform/base/argocd-route/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd
  namespace: argocd
spec:
  hostnames:
    - argocd.waeltarabishi-devops.online
  parentRefs:
    - name: public-gateway
      namespace: default
      sectionName: http
    - name: public-gateway
      namespace: default
      sectionName: https
  rules:
    - backendRefs:
        - name: argocd-server
          port: 80
